fix bonus subscription